--- a/src/assets/scss/now-ui-kit/_sections.scss
+++ b/src/assets/scss/now-ui-kit/_sections.scss
@@ -20,7 +20,7 @@
 
 .page-header{
   min-height: 100vh;
-  max-height: 999px;
+  max-height: auto;
   padding: 0;
   color: $white-color;
   position: relative;
